--- a/macos-sample-app/Info.plist
+++ b/macos-sample-app/Info.plist
@@ -28,5 +28,7 @@
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSRequiresAquaSystemAppearance</key>
+	<string>NO</string>
 </dict>
 </plist>
